Interfaz de Formulario de Asesor de Trabajo de Graduacion

--- a/plantilla_portal/templates/partials/barraEstudiante.html.twig
+++ b/plantilla_portal/templates/partials/barraEstudiante.html.twig
@@ -26,7 +26,7 @@
                             <a href="{{path('formularioTituloTrbajoDeGraduacion') }}">Formulario de ingreso de titulo de trabajo de graduacion</a>
                         </li>
                         <li>
-                            <a href="ui-cards.html">Formulario de propuesta de asesor</a>
+                            <a href="{{path('formularioAsesorPropuesto') }}">Formulario de propuesta de asesor</a>
                         </li>
                         <li>
                             <a href="ui-portlets.html">Adjudicacion de Carta de compromiso de asesores</a>
