--- a/plantilla_portal/templates/seminarioEstudiante/formularioTituloTrabajoDeGraduacion.html.twig
+++ b/plantilla_portal/templates/seminarioEstudiante/formularioTituloTrabajoDeGraduacion.html.twig
@@ -51,13 +51,13 @@
                         </p>
 
                         <div class="form-group col-md-6">
-						<label for="correo1">Titulo de trabajo de graduacion:</label>
+						<label for="titulo">Titulo de trabajo de graduacion:</label>
 						<textarea class="form-control" type='text' name='titulo' id='titulo' placeholder="titulo..."
 							value="" required></textarea>
 					    </div>
 
                         <div class="form-group col-md-6">
-                        <label for="correo1">Comentario para catedratico:</label>
+                        <label for="comentario">Comentario para catedratico:</label>
 						<textarea class="form-control" type='text' name='comentario' id='comentario' placeholder="Escriba su comentario..."
 							value="" required></textarea>
 					    </div>
