Interfaz de Formulario de Carta de compromiso de Asesor

--- a/plantilla_portal/templates/partials/barraEstudiante.html.twig
+++ b/plantilla_portal/templates/partials/barraEstudiante.html.twig
@@ -29,7 +29,7 @@
                             <a href="{{path('formularioAsesorPropuesto') }}">Formulario de propuesta de asesor</a>
                         </li>
                         <li>
-                            <a href="ui-portlets.html">Adjudicacion de Carta de compromiso de asesores</a>
+                            <a href="{{path('formularioCartaCompromiso') }}">Adjudicacion de Carta de compromiso de asesores</a>
                         </li>
                         <li>
                             <a href="ui-tabs-accordions.html">Agendar reunion con revisor</a>
