--- a/plantilla_portal/templates/seminarioEstudiante/formularioAgendarReunion.html.twig
+++ b/plantilla_portal/templates/seminarioEstudiante/formularioAgendarReunion.html.twig
@@ -44,61 +44,49 @@
                 <div class="row justify-content-md-center">
 		            <div class="col-md-8 col-sm-auto">
                 
-                        <h2>Agragar asesor de trabajo de graduacion</h2>
+                        <h2>Solicitud de reunion con revisor de Trabajo de Graduacion</h2>
                         <p>
-                        En este formulario el estudiante debe proponer un asesor para el trabajo de graduacion<br>
-                        se debe de ingresar con los requisitos estipulados por su respectiva escuela y esperar<br>
-                        la aprobacion del catedratico del curso de Seminario de Investigacion.
+                        Formulario de agendacion de reunion con revisor de escuela para revision de trabajo<br>
+                        de graduacion.<br>
                         </p>
-                        
                         <div class="form-row">
+
                             <div class="form-group col-md-6">
-                            <label for="nombres_asesor">Nombres del Asesor:</label>
-                            <input class="form-control" type='text' name='nombres_asesor' id='nombres_asesor' placeholder="Escriba los nombres del asesor..."
+                            <label for="lugar">Lugar o Sala:</label>
+                            <input class="form-control" type='text' name='lugar' id='lugar' placeholder="Escriba el lugar de reunion..."
                                 value="" required>
                             </div>
 
                             <div class="form-group col-md-6">
-                            <label for="apellidos_asesor">Apellidos del Asesor:</label>
-                            <input class="form-control" type='text' name='apellidos_asesor' id='apellidos_asesor' placeholder="Escriba los apellidos del asesor..."
-                                value="" required>
+                            <label for="fecha_hora">Fecha y Hora de Reunion:</label>
+				            <input type="datetime-local" id="fecha_hora" name="fecha_hora" class="form-control" />
                             </div>
                         </div>
+
                         <div class="form-row">
+                            
                             <div class="form-group col-md-4">
-                                <label for="numero_colegiado">Numero de Colegiado:</label>
-                                <input class="form-control" type='text' pattern=".{5}" name='numero_colegiado' id='numero_colegiado'
-                                    minlength="5" maxlength='13' placeholder="Numero de colegiado" required>
-                            </div>
-
-                            <div class="form-group col-md-4">
-                                <label for="tiempo_colegiado">Tiempo de colegiado:</label>
-                                <input class="form-control" type='text' pattern=".{1}" name='tiempo_colegiado' id='tiempo_colegiado'
-                                    minlength="1" maxlength='2' placeholder="Numero de Años colegiado" required>
-                            </div>
-
-                            <div class="form-group col-md-4">
-                                <label for="rol" class="required">Rol a cumplir:</label>
-                                <select class="form-control" name="rol" id="rol" required>
-                                    <option value="0" selected>seleccione un rol...</option>
-                                    <option value="Asesor Individual">Asesor Individual</option>
-                                    <option value="Asesor Institucion">Asesor Institucion</option>
-                                    <option value="Asesor Institucion">Jefe Inmediato</option>
-                                    <option value="Interesados">Interesado</option>
+                                <label for="materia" class="required">Interesados Aprobados:</label>
+                                <select class="form-control" name="materia" id="materia" required>
+                                    <option value="0" selected>seleccione uno de los Interesados...</option>
+                                    <option value="Asesor Individual">Interesado 1</option>
+                                    <option value="Asesor Institucion">Interesado 2</option>
+                                    <option value="Asesor Institucion">Interesado 3</option>
+                                    <option value="Interesados">Interesado N</option>
                                 </select>
                             </div>
 
                         </div>
                         <div class="form-row">
                             <div class="form-group col-md-6">
-                            <label for="comentario">Comentario para catedratico:</label>
-                            <textarea class="form-control" type='text' name='comentario' id='comentario' placeholder="Escriba su comentario..."
+                            <label for="comentario">Motivo de Reunion:</label>
+                            <textarea class="form-control" type='text' name='comentario' id='comentario' placeholder="Escriba su motivo de solicitud..."
                                 value="" required></textarea>
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="form-group col-md-6">
-                                <input type="submit" name="confirmar" id='confirmar' value="Confirmar asesor" 
+                                <input type="submit" name="confirmar" id='confirmar' value="Confirmar solicitud" 
                                     class="btn btn-success">
                             </div>
                         </div>
